...
                            android:layout_marginTop="10dp"
                            android:background="@drawable/filled_light_grey"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{userModel.name}"
                                android:textColor="@color/app_text_ui_color_grey"
                                android:textSize="17sp"
                                android:textStyle="bold" />
...
                            android:layout_marginTop="10dp"
                            android:background="@drawable/filled_light_grey"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/userEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{userModel.email}"
                                android:textColor="@color/app_text_ui_color_grey"
                                android:textSize="17sp"
                                android:textStyle="bold" />
...
